--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pad",
-  "version": "6.1.14",
+  "version": "6.1.16",
   "dependencies": {
     "async": "^2.0.1",
     "babel-polyfill": "^6.7.2",
@@ -20,9 +20,11 @@
     "jquery": "^3.1.1",
     "lodash": "^4.16.3",
     "log": "^1.4.0",
+    "lusca": "^1.3.0",
     "method-override": "^2.3.6",
     "mime": "^1.3.4",
     "moment": "^2.15.1",
+    "morgan": "^1.7.0",
     "open": "0.0.5",
     "osenv": "^0.1.3",
     "progress": "^1.1.8",
@@ -42,5 +44,5 @@
     "frame": true
   },
   "chromium-args": "--enable-experimental-web-platform-features --enable-threaded-compositing",
-  "padversion": "v6.1.14-beta"
+  "padversion": "v6.1.16-beta"
 }
