--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pad",
-  "version": "6.2.10",
+  "version": "6.2.11",
   "dependencies": {
     "angular": "~1.6.0",
     "angular-animate": "~1.6.0",
@@ -40,6 +40,7 @@
     "ng-grid-panel": "git+https://github.com/Dte-ba/ng-grid-panel.git",
     "ng-infinite-scroll": "^1.3.0",
     "osenv": "^0.1.4",
+    "open": "0.0.5",
     "progress": "^2.0.0",
     "serve-favicon": "^2.3.0",
     "serve-index": "^1.9.0",
@@ -57,5 +58,5 @@
     "frame": true
   },
   "chromium-args": "--enable-experimental-web-platform-features --enable-threaded-compositing",
-  "padversion": "v6.2.10-beta"
+  "padversion": "v6.2.11-beta"
 }
